@@ -20,6 +20,7 @@ package org.grails.compiler.injection;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -55,7 +56,7 @@ import org.grails.io.support.Resource;
  * @author Graeme Rocher
  * @since 0.6
  */
-public class GrailsAwareInjectionOperation extends CompilationUnit.PrimaryClassNodeOperation {
+public class GrailsAwareInjectionOperation implements CompilationUnit.IPrimaryClassNodeOperation {
 
     private static final String INJECTOR_SCAN_PACKAGE = "org.grails.compiler";
     private static final String INJECTOR_CODEHAUS_SCAN_PACKAGE = "org.codehaus.groovy.grails.compiler";
@@ -136,14 +137,14 @@ public class GrailsAwareInjectionOperation extends CompilationUnit.PrimaryClassN
                                     if (ClassInjector.class.isAssignableFrom(injectorClass)) {
 
                                         injectorClasses.add(injectorClass);
-                                        ClassInjector classInjector = (ClassInjector) injectorClass.newInstance();
+                                        ClassInjector classInjector = (ClassInjector) injectorClass.getDeclaredConstructor().newInstance();
                                         injectors.add(classInjector);
                                         if (GlobalClassInjector.class.isAssignableFrom(injectorClass)) {
                                             globalInjectors.add(classInjector);
                                         }
                                     }
                                 }
-                            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+                            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
                                 // ignore
                             }
                             return super.visitAnnotation(desc, visible);
